--- a/configuration/templates/account/auth/sign-up-admin.hbs
+++ b/configuration/templates/account/auth/sign-up-admin.hbs
@@ -100,7 +100,7 @@
         },
         {
           type: "run",
-          config: { code: "window.location.href = '/set-temp-admin/'" }
+          config: { code: "window.location.href = '/applying-for-admin/'" }
         }
       ]
     }
