--- a/configuration/partials/emails/hours-verify-body.html
+++ b/configuration/partials/emails/hours-verify-body.html
@@ -220,7 +220,7 @@
                                               {{/compare}}
                                             {{/each}}
                                           </ul>
-                                          <p> Please <a href="{{@root.context.metaData.url}}/verify-hours/?t={{>account_list_tasks email=this}}&c={{@root.data.verifyInfoBody.hours_verify_code}}&user_id={{@root.data.auth.uid}}">confirm these hours are correct</a> or <a href="{{@root.context.metaData.url}}/query-hours/?t={{>account_list_tasks email=this}}&c={{@root.data.verifyInfoBody.hours_verify_code}}&user_id={{@root.data.auth.uid}}">make any amendments</a>. </p>
+                                          <p> Please <a href="{{@root.context.metaData.url}}/verify-hours/?t={{getProperty @root.data.tasksByEmail (replace this '.' '_')}}&c={{>account_hash_ct taskstr=(getProperty @root.data.tasksByEmail (replace this '.' '_')) code=@root.data.verifyInfoBody.hours_verify_code}}&user_id={{@root.data.auth.uid}}"> confirm these hours are correct</a> or <a href="{{@root.context.metaData.url}}/query-hours/?t={{getProperty @root.data.tasksByEmail (replace this '.' '_')}}&c={{>account_hash_ct taskstr=(getProperty @root.data.tasksByEmail (replace this '.' '_')) code=@root.data.verifyInfoBody.hours_verify_code}}&user_id={{@root.data.auth.uid}}">make any amendments</a>. </p>
                                         </div>
                                       </td>
                                     </tr>
