made secondary delete route, to monitor what's actually happening

--- a/configuration/templates/pages/test.hbs
+++ b/configuration/templates/pages/test.hbs
@@ -1,35 +1,1 @@
-<div class="container">
-  <div class="columns">
-    <div class="column col-9 col-xl-12">
-      <h2>
-        Demo for award.
-      </h2>
-
-      {{>account_hash_ct taskstr='aloee' code='13234'}}
-
-      <p>Test advanced check</p>
-
-
-      <p>Did We Pass --- {{@root.data.codeVerified}}</p>
-      <p>Task Id = {{@root.request.params.task_id}}</p>
-
-      <p>Task Id Param "t" = {{@root.request.params.query.t}}</p>
-
-      <p>Resolved t param = >>{{default @root.request.params.task_id (default @root.request.body.task_id @root.request.params.query.t)}}<<</p>
-
-      <p>Old code = "myoldmansadustman123"</p>
-
-      <p>So c = {{>account_hash_ct taskstr='a1T5E000001wHOwUAM' code=@root.data.accountInfo.hours_verify_code}}</p>
-
-      <p>our equation = {{hash (concat @root.data.accountInfo.hours_verify_code (default @root.request.params.task_id @root.request.body.task_id @root.request.params.query.t) @root.context.metaData.verifySalt)}} </p>
-
-
-      <p>Basic email structure - normal emails:</p>
-
-      {{#eachJoin (distinct (pluck @root.data.tasksInfoUnverified "volunteer_manager_email")) "," ~}}
-        <p>{{this}} values={{getProperty @root.data.tasksByEmail (replace this '.' '_')}}
-          codified={{>account_hash_ct taskstr=(getProperty @root.data.tasksByEmail (replace this '.' '_')) code=@root.data.accountInfo.hours_verify_code}}
-      {{/eachJoin ~}}
-    </div>
-  </div>
-</div>
+Whatever.
