--- a/configuration/emails/hours-verify-reminder-body.mjml
+++ b/configuration/emails/hours-verify-reminder-body.mjml
@@ -51,7 +51,7 @@
 
             <p>
               Please <a href="{{@root.context.metaData.url}}/verify-hours/?t={{getProperty @root.data.tasksByEmail (replace this '.' '_')}}&c={{>account_hash_ct taskstr=(getProperty @root.data.tasksByEmail (replace this '.' '_')) code=@root.data.accountInfo.hours_verify_code}}&user_id={{@root.data.accountInfo.external_id}}"> confirm these hours are correct</a>
-              or <a href="{{@root.context.metaData.url}}/query-hours/?t={{getProperty @root.data.tasksByEmail (replace this '.' '_')}}&c={{>account_hash_ct taskstr=(getProperty @root.data.tasksByEmail (replace this '.' '_')) code=@root.data.accountInfo.hours_verify_code}}&&c={{@root.data.accountInfo.hours_verify_code}}&user_id={{@root.data.accountInfo.external_id}}">make any amendments</a>.
+              or <a href="{{@root.context.metaData.url}}/query-hours/?t={{getProperty @root.data.tasksByEmail (replace this '.' '_')}}&c={{>account_hash_ct taskstr=(getProperty @root.data.tasksByEmail (replace this '.' '_')) code=@root.data.accountInfo.hours_verify_code}}&user_id={{@root.data.accountInfo.external_id}}">make any amendments</a>.
             </p>
           </mj-text>
         </mj-column>
