--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -481,7 +481,7 @@
             <div class="column col-6 col-xl-12 about">
               <h4>About</h4>
               <p class="b-margin">
-                The {{@root.context.metaData.title}} is run by Scotland's <a href="https://www.gov.scot/policies/third-sector/third-sector-interfaces">Third Sector Interfaces</a> and supported by the <a href="https://www.gov.scot/policies/third-sector">Scottish Government</a> and the <a href="https://scvo.org">Scottish Council for Voluntary Organisations</a>.
+                The {{@root.context.metaData.title}} is run by Scotland's <a href="https://www.gov.scot/policies/third-sector/third-sector-interfaces">Third Sector Interfaces</a> and supported by the <a href="https://www.gov.scot/policies/third-sector">Scottish Government</a> and the <a href="https://scvo.scot">Scottish Council for Voluntary Organisations</a>.
               </p>
               {{!-- <ul>
                 {{#each @root.context.metaData.menus.footer-about ~}}
@@ -513,7 +513,7 @@
               <a href="https://www.gov.scot/policies/third-sector" class="brand-logo sg-logo" title="Scottish Government">
                 <img src="{{~>asset_url url='images/logos/SG_Quaternary_govscot_RGB.png'~}}" alt="Scottish Government" />
               </a>
-              <a href="https://scvo.org" class="brand-logo scvo-logo" title="Scottish Council for Voluntary Organisations">
+              <a href="https://scvo.scot" class="brand-logo scvo-logo" title="Scottish Council for Voluntary Organisations">
                 <img src="{{~>asset_url url='images/logos/scvo-secondary.svg'~}}" alt="Scottish Council for Voluntary Organisations" />
               </a>
             </div>
