--- a/configuration/templates/account/auth/sign-in-admin.hbs
+++ b/configuration/templates/account/auth/sign-in-admin.hbs
@@ -6,31 +6,35 @@
   </div>
   <div class="x-padding">
     <div id="form-section-email">
-      <div class="form-group has-icon-left">
-        <input class="form-input" type="email" id="sign-in-email" placeholder="Email" />
-        <span class="form-icon far fa-envelope" id="sign-in-email-icon"></span>
-      </div>
+      <div class="label label-warning t-margin x-padding t-padding" style="width:100%;">
+        <div class="form-group has-icon-left">
+          <input class="form-input" type="email" id="sign-in-email" placeholder="Email" />
+          <span class="form-icon far fa-envelope" id="sign-in-email-icon"></span>
+        </div>
 
-      <div class="form-group has-icon-left">
-        <input class="form-input" type="password" id="sign-in-password" placeholder="Password" />
-        <span class="form-icon far fa-key" id="sign-in-password-icon"></span>
+        <div class="form-group has-icon-left">
+          <input class="form-input" type="password" id="sign-in-password" placeholder="Password" />
+          <span class="form-icon far fa-key" id="sign-in-password-icon"></span>
+        </div>
       </div>
     </div>
-    <div id="form-section-sign-in-buttons" class="t-margin">
-      <button class="btn btn-primary" type="submit" id="sign-in-submit" data-component="TasksTrigger" data-TasksTrigger="sign-in" data-provider-id="password">
-        Sign in
-      </button>
-      <p class="v-margin-full">
-        Forgot your password? <a href="/reset-password">Reset password</a>
-      </p>
-      <p class="v-margin-full">
-        Read our <a href="/privacy" target="_blank">privacy notice</a>
-      </p>
-      <h3>
-        Not registered?
-      </h3>
-      <div class="v-margin-full">
-        <a href="/sign-up-admin" class="btn">Request approval</a>
+    <div id="form-section-sign-in-buttons" class="">
+      <div class="label label-warning x-padding t-padding b-margin-full" style="width:100%;">
+        <button class="btn btn-primary" type="submit" id="sign-in-submit" data-component="TasksTrigger" data-TasksTrigger="sign-in" data-provider-id="password">
+          Sign in
+        </button>
+        <p class="v-margin-full">
+          Forgot your password? <a href="/reset-password">Reset password</a>
+        </p>
+        <p class="v-margin-full">
+          Read our <a href="/privacy" target="_blank">privacy notice</a>
+        </p>
+        <h3>
+          Not registered?
+        </h3>
+        <div class="t-margin-full">
+          <a href="/sign-up-admin" class="btn">Request approval</a>
+        </div>
       </div>
       <h3>
         Volunteer?
