--- a/configuration/templates/account/auth/sign-in.hbs
+++ b/configuration/templates/account/auth/sign-in.hbs
@@ -39,15 +39,17 @@
         <div class="t-margin b-margin-full">
           <a href="/sign-up" class="btn">Sign up for a free account</a>
         </div>
-        <h3>
-          Group administrator?
-        </h3>
-        <div class="my-saltire columns t-margin">
-          <div class="column col-6 my-saltire-item align-centre">
-            <a href="/sign-up-admin" class="btn text-centre">Request approval</a>
-          </div>
-          <div class="column col-6 my-saltire-item align-centre">
-            <a href="/sign-in-admin" class="btn text-centre">Sign in</a>
+        <div class="label label-warning x-padding t-padding b-margin-full" style="width:100%;">
+          <h3>
+            Group administrator?
+          </h3>
+          <div class="my-saltire columns t-margin">
+            <div class="column col-6 my-saltire-item align-centre">
+              <a href="/sign-up-admin" class="btn text-centre">Request approval</a>
+            </div>
+            <div class="column col-6 my-saltire-item align-centre">
+              <a href="/sign-in-admin" class="btn text-centre">Sign in</a>
+            </div>
           </div>
         </div>
       </div>
