--- a/configuration/templates/account/auth/sign-up.hbs
+++ b/configuration/templates/account/auth/sign-up.hbs
@@ -43,15 +43,17 @@
         <div class="t-margin b-margin-full">
           <a href="/sign-in" class="btn">Sign in</a>
         </div>
-        <h3>
-          Group administrator?
-        </h3>
-        <div class="my-saltire columns t-margin">
-          <div class="column col-6 my-saltire-item align-centre">
-            <a href="/sign-up-admin" class="btn text-centre">Request approval</a>
-          </div>
-          <div class="column col-6 my-saltire-item align-centre">
-            <a href="/sign-in-admin" class="btn text-centre">Sign in</a>
+        <div class="label label-warning t-margin x-padding t-padding" style="width:100%;">
+          <h3>
+            Group administrator?
+          </h3>
+          <div class="my-saltire columns t-margin">
+            <div class="column col-6 my-saltire-item align-centre">
+              <a href="/sign-up-admin" class="btn text-centre">Request approval</a>
+            </div>
+            <div class="column col-6 my-saltire-item align-centre">
+              <a href="/sign-in-admin" class="btn text-centre">Sign in</a>
+            </div>
           </div>
         </div>
       </div>
