--- a/configuration/templates/account/auth/sign-in-admin.hbs
+++ b/configuration/templates/account/auth/sign-in-admin.hbs
@@ -5,6 +5,23 @@
     </div>
   </div>
   <div class="x-padding">
+
+    <h3>
+      Are you a volunteer?
+    </h3>
+    <div class="my-saltire columns t-margin b-margin-full">
+      <div class="column col-6 my-saltire-item align-centre">
+        <a href="/sign-up" class="btn text-center">Sign up as a volunteer</a>
+      </div>
+      <div class="column col-6 my-saltire-item align-centre">
+        <a href="/sign-in" class="btn text-centre">Sign in</a>
+      </div>
+    </div>
+
+    <h3 class="t-padding-full">
+      Are you the administrator for a group?
+    </h3>
+
     <div id="form-section-email">
       <div class="label label-warning t-margin x-padding t-padding" style="width:100%;">
         <div class="form-group has-icon-left">
@@ -30,21 +47,10 @@
           Read our <a href="/privacy" target="_blank">privacy notice</a>
         </p>
         <h3>
-          Not registered?
+          Don't have an account?
         </h3>
         <div class="t-margin-full">
           <a href="/sign-up-admin" class="btn">Request approval</a>
-        </div>
-      </div>
-      <h3>
-        Volunteer?
-      </h3>
-      <div class="my-saltire columns t-margin">
-        <div class="column col-6 my-saltire-item align-centre">
-          <a href="/sign-up" class="btn text-center">Sign up as a volunteer</a>
-        </div>
-        <div class="column col-6 my-saltire-item align-centre">
-          <a href="/sign-in" class="btn text-centre">Sign in</a>
         </div>
       </div>
     </div>
