--- a/configuration/templates/account/auth/sign-in.hbs
+++ b/configuration/templates/account/auth/sign-in.hbs
@@ -39,7 +39,7 @@
         <div class="t-margin b-margin-full">
           <a href="/sign-up" class="btn">Sign up for a free account</a>
         </div>
-        <div class="label label-warning x-padding t-padding b-margin-full" style="width:100%;">
+        <div class="label label-warning x-padding t-padding b-margin-full t-margin-full" style="width:100%;">
           <h3>
             Group administrator?
           </h3>
