--- a/configuration/templates/account/auth/sign-up.hbs
+++ b/configuration/templates/account/auth/sign-up.hbs
@@ -43,7 +43,7 @@
         <div class="t-margin b-margin-full">
           <a href="/sign-in" class="btn">Sign in</a>
         </div>
-        <div class="label label-warning t-margin x-padding t-padding" style="width:100%;">
+        <div class="label label-warning t-margin x-padding t-padding t-margin-full" style="width:100%;">
           <h3>
             Group administrator?
           </h3>
