new nomination form

--- a/src/main.scss
+++ b/src/main.scss
@@ -1645,3 +1645,8 @@ footer {
   color: #fff;
   background: $dark-color;
 }
+
+.kalendae .k-days span {
+  width: 20px !important;
+  height: auto !important;
+}
