--- a/configuration/partials/opportunity/map.hbs
+++ b/configuration/partials/opportunity/map.hbs
@@ -20,6 +20,6 @@
     {{/if ~}}
   </div>
   <div class="opportunity-link">
-    <a href="/search/opportunity/{{Id}}/{{title_slug}}{{> query_search}}" class="btn btn-link">Find out more</a>
+    <a href="/search/opportunity/{{Id}}/{{title_slug}}{{> query_search}}" class="btn btn-link" aria-label="Find out more about {{title}}">Find out more</a>
   </div>
 </div>
