--- a/configuration/templates/pages/about.hbs
+++ b/configuration/templates/pages/about.hbs
@@ -42,7 +42,7 @@
   </h3>
   <p>
     <a href="/search">Search for volunteer opportunities</a><br />
-    <a href="/info-for-volunteers">Find out more</a><br />
+    <a href="/info-for-volunteers" aria-label="Find out more about how to get involved">Find out more</a><br />
     <a href="info-for-groups">Support young people in your group / organisation</a>
   </p>
 
