--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -2,15 +2,16 @@
 <html lang="en">
 <head prefix="og: http://ogp.me/ns# profile: http://ogp.me/ns/profile#">
   <meta charset="utf-8">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3467930-33"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YBR3JYL23X"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-3467930-33');
+    gtag('config', 'G-YBR3JYL23X');
   </script>
+
   {{{layoutParts.head}}}
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
