fix summit nomination form

--- a/configuration/templates/pages/summit-nomination.hbs
+++ b/configuration/templates/pages/summit-nomination.hbs
@@ -1,4 +1,6 @@
-<!-- FORM: HEAD SECTION -->
+<script src="https://www.tfaforms.com/publish/4924816" data-qp-target-id="nomination-form" defer></script>
+<div id="nomination-form"></div>
+<!-- FORM: HEAD SECTION --
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="referrer" content="no-referrer-when-downgrade">
@@ -48,7 +50,7 @@
 	<script type="text/javascript" src="https://www.tfaforms.com/wForms/3.11/js/wforms_calendar.js"></script>
     <script type="text/javascript" src="https://www.tfaforms.com/wForms/3.11/js/localization-en_GB.js?v=1628587126"></script>
 
-    <!-- FORM: BODY SECTION -->
+    <!-- FORM: BODY SECTION --
     <div class="container wFormContainer" >
         <div class="wFormHeader"></div>
         <style type="text/css"></style><div class=""><div class="wForm" id="4924816-WRPR" dir="ltr">
@@ -185,3 +187,4 @@ No</label></span></span></div>
     </form>
     </div></div>
      </div>
+<!-- -->
