--- a/src/main.scss
+++ b/src/main.scss
@@ -114,6 +114,18 @@ h5 {
   margin-bottom: 0;
   // letter-spacing: -0.05rem;
 }
+.wForm {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5 {
+    text-transform: none;
+  }
+  .label {
+    background-color: transparent;
+  }
+}
 a,
 .btn,
 .chip,
